--- a/hartLogAnalyze/MainWindow.xaml
+++ b/hartLogAnalyze/MainWindow.xaml
@@ -9,6 +9,6 @@
         Title="MainWindow" Height="450" Width="800"
         >
     <ContentControl>
-        <vm:hartLogInputVM/>
+        <vm:mainWindowVM/>
     </ContentControl>
 </Window>
