--- a/hartLogAnalyze/CompositeTextStringView.xaml
+++ b/hartLogAnalyze/CompositeTextStringView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="hartLogAnalyze.HartCommandDataAsASCIIStringView"
+﻿<UserControl x:Class="hartLogAnalyze.CompositeTextStringView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,5 +6,11 @@
              xmlns:local="clr-namespace:hartLogAnalyze"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <TextBlock Text="{Binding DisplayString}" />
+    <ItemsControl ItemsSource="{Binding Items}">
+        <ItemsControl.ItemsPanel>
+            <ItemsPanelTemplate>
+                <StackPanel Orientation="Horizontal"/>
+            </ItemsPanelTemplate>
+        </ItemsControl.ItemsPanel>
+    </ItemsControl>
 </UserControl>
