--- a/hartLogAnalyze/ControlCharacterVM.xaml
+++ b/hartLogAnalyze/ControlCharacterVM.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="hartLogAnalyze.HartCommandDataAsASCIIStringView"
+﻿<UserControl x:Class="hartLogAnalyze.ControlCharacterVM"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,5 +6,7 @@
              xmlns:local="clr-namespace:hartLogAnalyze"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <TextBlock Text="{Binding DisplayString}" />
+    <Border Background="LightPink" BorderBrush="CadetBlue" BorderThickness="1" CornerRadius="5">
+        <TextBlock Text="{Binding DisplayString}" />
+    </Border>
 </UserControl>
