--- a/hartLogAnalyze/HartCommandView.xaml
+++ b/hartLogAnalyze/HartCommandView.xaml
@@ -9,26 +9,35 @@
     <Grid>
         <Border  BorderBrush="LightGray" BorderThickness="1">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="CMD # "/>
-                <TextBlock Text="{Binding Number}" FontWeight="Bold" />
-                <StackPanel Orientation="Horizontal">
-                    <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="  QUERY DATA: "/>
-                    <Border BorderBrush="Yellow" BorderThickness="1">
-                        <ItemsControl ItemsSource="{Binding QueryDataRepresentations}">
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <Border BorderBrush="DarkGreen" BorderThickness="1">
-                                        <ContentControl Content="{Binding}"/>
-                                    </Border>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
-                    </Border>
+                <TextBlock Margin="5 0 5 0" Text="{Binding DateTime, StringFormat=[ HH-mm-ss ]}" FontWeight="Bold"/>
+                <StackPanel Orientation="Horizontal" Width="110">
+                    <TextBlock Margin="5 0 5 0" Text="[ SEQID = "/>
+                    <TextBlock Margin="0 0 5 0" Text="{Binding SEQID}" FontWeight="Bold" />
+                    <TextBlock Margin="0 0 5 0" Text=" ]" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Width="90" >
+                    <TextBlock Text="[ CMD # " />
+                    <TextBlock Text="{Binding Number}" FontWeight="Bold"/>
+                    <TextBlock Text=" ]" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" >
+                    <StackPanel Orientation="Horizontal" MinWidth="200">
+                        <TextBlock Text="QUERY DATA: "/>
+                        <Border BorderBrush="Yellow" BorderThickness="1">
+                            <ItemsControl ItemsSource="{Binding QueryDataRepresentations}">
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <Border BorderBrush="LightGreen" BorderThickness="1">
+                                            <ContentControl Content="{Binding}"/>
+                                        </Border>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </Border>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="  ANSWER DATA: "/>
-                        <Border BorderBrush="Green" BorderThickness="1">
+                        <Border BorderBrush="LightGreen" BorderThickness="1">
                             <ItemsControl ItemsSource="{Binding AnswerDataRepresentations}">
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
